2008-10-23  Don Porter	<dgp@users.sourceforge.net>

	* generic/tcl.h:	Bump version number to 8.5.6b1 to distinguish
	* library/init.tcl:	CVS development snapshots from the 8.5.5 and
	* unix/configure.in:	8.5.6 releases.
	* unix/tcl.spec:
	* win/configure.in:
	* tools/tcl.wse.in:
	* README

	* unix/configure:	autoconf (2.59)
	* win/configure:

2008-10-19  Don Porter	<dgp@users.sourceforge.net>

	* generic/tclProc.c:	Reset -level and -code values to defaults
	after they are used.  [Bug 2152286].

2008-10-16  Don Porter	<dgp@users.sourceforge.net>

	* library/init.tcl:	Revised [unknown] so that it carefully 
	preserves the state of the ::errorInfo and ::errorCode variables
	at the start of auto-loading and restores that state before the
	autoloaded command is evaluated.  [Bug 2140628]

2008-10-10  Don Porter	<dgp@users.sourceforge.net>

	*** 8.5.5 TAGGED FOR RELEASE ***

	* generic/tcl.h:	Bump to 8.5.5 for release.
	* library/init.tcl:
	* tools/tcl.wse.in:
	* unix/configure.in:
	* unix/tcl.spec:
	* win/configure.in:

	* unix/configure:	autoconf-2.59
	* win/configure:

	* changes:	Update for 8.5.5 release.

2008-10-08  Don Porter	<dgp@users.sourceforge.net>

	* generic/tclTrace.c:   Corrected handling of errors returned by
	variable traces so that the errorInfo value contains the original
	error message.  [Bug 2151707]

	* generic/tclVar.c:     Revised implementation of TclObjVarErrMsg
	so that error message construction does not disturb an existing
	iPtr->errorInfo that may be in progress.

2008-10-06  Jan Nijtmans  <nijtmans@users.sf.net>

	* tclWinTest.c: Fix compiler warning when compiling this file with mingw gcc:
    tclWinTest.c:706: warning: dereferencing type-punned pointer will break
    strict-aliasing rules
	* generic/tclLoad.c: Make sure that any library which doesn't have an
	unloadproc is only really unloaded when no library code is executed
	yet. [Bug 2059262]

2008-10-06  Joe Mistachkin  <joe@mistachkin.com>
