@@ -1,3 +1,8 @@
+2008-10-24  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* library/http/http.tcl: Backported a fix for reading HTTP-like protocols
+	that used to work and were broken with http 2.7. Now http 2.7.2
+
 2008-10-23  Don Porter	<dgp@users.sourceforge.net>
 
 	* generic/tcl.h:	Bump version number to 8.5.6b1 to distinguish
